# gigachat-challenge-propinvest-ai

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  init-letsencrypt.sh  pyproject.toml
propinvest_ai/: __main__.py  chat.py  settings.py
proxy/nginx/: ai.conf  api.conf
