[tool.poetry]
name = "propinvest-ai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gigachain = "^0.0.343"
fastapi = "^0.104.1"
pydantic-settings = "^2.1.0"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "propinvest_ai.__main__:main"
